--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
-    "version":2,
-    "builds":[
-        {"src": "./index.js", "use": "@vercel/node"}
+    "version": 2,
+    "builds": [
+      { "src": "public/**/*", "use": "@vercel/static" }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "/index.html"
+      }
     ]
-}
+  }
+  
