--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
     "builds": [
-      { "src": "public/**/*", "use": "@vercel/static" }
+      { "src": "public/index.html", "use": "@vercel/static" }
     ],
     "routes": [
       {
